colocado el inicio de JS

--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
 <html>
 <head>
     <title>Mi título</title>
+    <script>
+        /*
+            Código JS
+         */
+    </script>
 </head>
 <body>
 <h1>Bienvenido</h1>
     <p>Loren ipsum</p>
-<p>Otro Lorem ipsum</p>
+    <p>Otro Lorem ipsum</p>
 </body>
 </html>
