incluido fichero css en el html

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
     <title>Mi título</title>
+    <link href="css/estilos.css" type="text/css" rel="stylesheet"/>
 </head>
 <body>
 <h1>Bienvenido</h1>
