--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
          */
         var foo="";
         var bar=2;
+        function mifu(){
+            return true;
+        }
     </script>
 </head>
 <body>
