incluido código css base

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
     <title>Mi título</title>
     <link href="css/estilos.css" type="text/css" rel="stylesheet"/>
+    <link href="css/estilos-base.css" type="text/css" rel="stylesheet"/>
     <script>
         /*
             Código JS
@@ -9,6 +10,7 @@
         var foo="";
         var bar=2;
     </script>
+
 </head>
 <body>
 <h1>Bienvenido</h1>
